Agregados métodos prepareJSON en clases REST.