@@ -19,7 +19,6 @@ import javax.persistence.criteria.Join;
 import javax.persistence.criteria.JoinType;
 import javax.persistence.criteria.Order;
 import javax.persistence.criteria.Path;
-import javax.persistence.criteria.Predicate;
 import javax.persistence.criteria.Root;
 
 import uy.com.amensg.logistica.entities.ACMInterfaceEstado;
@@ -30,7 +29,7 @@ import uy.com.amensg.logistica.entities.MetadataConsulta;
 import uy.com.amensg.logistica.entities.MetadataConsultaResultado;
 import uy.com.amensg.logistica.entities.MetadataOrdenacion;
 import uy.com.amensg.logistica.util.Configuration;
-import uy.com.amensg.logistica.util.Constants;
+import uy.com.amensg.logistica.util.QueryBuilder;
 import uy.com.amensg.logistica.util.QueryHelper;
 
 @Stateless
@@ -48,16 +47,9 @@ public class ACMInterfaceNumeroContratoBean implements IACMInterfaceNumeroContra
 		MetadataConsultaResultado result = new MetadataConsultaResultado();
 		
 		try {
-			// Query para obtener los registros de muestra
-			TypedQuery<ACMInterfaceNumeroContrato> queryMuestra = this.construirQuery(metadataConsulta);
-			queryMuestra.setMaxResults(metadataConsulta.getTamanoMuestra().intValue());
-			
-			Collection<Object> registrosMuestra = new LinkedList<Object>();
-			for (ACMInterfaceNumeroContrato acmInterfaceNumeroContrato : queryMuestra.getResultList()) {
-				registrosMuestra.add(acmInterfaceNumeroContrato);
-			}
-			
-			result.setRegistrosMuestra(registrosMuestra);
+			return new QueryBuilder<ACMInterfaceNumeroContrato>().list(
+				entityManager, metadataConsulta, new ACMInterfaceNumeroContrato()
+			);
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
@@ -69,24 +61,9 @@ public class ACMInterfaceNumeroContratoBean implements IACMInterfaceNumeroContra
 		Long result = null;
 		
 		try {
-			CriteriaBuilder criteriaBuilder = entityManager.getCriteriaBuilder();
-			
-			CriteriaQuery<Long> criteriaQueryCount = criteriaBuilder.createQuery(Long.class);
-			
-			Root<ACMInterfaceNumeroContrato> rootCount = criteriaQueryCount.from(ACMInterfaceNumeroContrato.class);
-			rootCount.alias("root");
-			
-			Predicate where = new QueryHelper().construirWhere(metadataConsulta, criteriaBuilder, rootCount);
-			
-			criteriaQueryCount
-				.select(criteriaBuilder.count(rootCount))
-				.where(where);
-			
-			TypedQuery<Long> queryCount = entityManager.createQuery(criteriaQueryCount);
-			
-			this.setQueryParameters(criteriaQueryCount, queryCount, metadataConsulta);
-			
-			result = queryCount.getSingleResult();
+			result = new QueryBuilder<ACMInterfaceNumeroContrato>().count(
+				entityManager, metadataConsulta, new ACMInterfaceNumeroContrato()
+			);
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
@@ -103,16 +80,16 @@ public class ACMInterfaceNumeroContratoBean implements IACMInterfaceNumeroContra
 			acmInterfaceProceso.setFechaInicio(hoy);
 			acmInterfaceProceso.setObservaciones(observaciones);
 			
-			acmInterfaceProceso.setUact(new Long(1));
+			acmInterfaceProceso.setUact(Long.valueOf(1));
 			acmInterfaceProceso.setFact(hoy);
-			acmInterfaceProceso.setTerm(new Long(1));
+			acmInterfaceProceso.setTerm(Long.valueOf(1));
 			
 			acmInterfaceProceso = iACMInterfaceProcesoBean.save(acmInterfaceProceso);
 			
 			ACMInterfaceEstado estado = 
 				entityManager.find(
 					ACMInterfaceEstado.class, 
-					new Long(Configuration.getInstance().getProperty("acmInterfaceEstado.ParaProcesarPrioritario"))
+					Long.parseLong(Configuration.getInstance().getProperty("acmInterfaceEstado.ParaProcesarPrioritario"))
 				);
 			
 //			if (metadataConsulta.getMetadataCondiciones().size() >= 2) {
@@ -120,11 +97,11 @@ public class ACMInterfaceNumeroContratoBean implements IACMInterfaceNumeroContra
 //				
 //				MetadataCondicion metadataCondicion = iterator.next();
 //				
-//				Long numeroContratoDesde = new Long(metadataCondicion.getValores().iterator().next());
+//				Long numeroContratoDesde = Long.parseLong(metadataCondicion.getValores().iterator().next());
 //				
 //				metadataCondicion = iterator.next();
 //				
-//				Long numeroContratoHasta = new Long(metadataCondicion.getValores().iterator().next());
+//				Long numeroContratoHasta = Long.parseLong(metadataCondicion.getValores().iterator().next());
 //				
 //				for (long i=numeroContratoDesde; i<numeroContratoHasta; i++) {
 //					ACMInterfaceNumeroContrato acmInterfaceNumeroContrato = new ACMInterfaceNumeroContrato();
@@ -132,11 +109,11 @@ public class ACMInterfaceNumeroContratoBean implements IACMInterfaceNumeroContra
 //					acmInterfaceNumeroContrato.setNumeroContrato(i);
 //					acmInterfaceNumeroContrato.setProcesoId(acmInterfaceProceso.getId());
 //					
-//					acmInterfaceNumeroContrato.setUact(new Long(1));
-//					acmInterfaceNumeroContrato.setUcre(new Long(1));
+//					acmInterfaceNumeroContrato.setUact(Long.valueOf(1));
+//					acmInterfaceNumeroContrato.setUcre(Long.valueOf(1));
 //					acmInterfaceNumeroContrato.setFact(hoy);
 //					acmInterfaceNumeroContrato.setFcre(hoy);
-//					acmInterfaceNumeroContrato.setTerm(new Long(1));
+//					acmInterfaceNumeroContrato.setTerm(Long.valueOf(1));
 //					
 //					entityManager.merge(acmInterfaceNumeroContrato);
 //				}
@@ -147,9 +124,9 @@ public class ACMInterfaceNumeroContratoBean implements IACMInterfaceNumeroContra
 				
 				acmInterfaceNumeroContrato.setEstado(estado);
 				
-				acmInterfaceNumeroContrato.setUact(new Long(1));
+				acmInterfaceNumeroContrato.setUact(Long.valueOf(1));
 				acmInterfaceNumeroContrato.setFact(hoy);
-				acmInterfaceNumeroContrato.setTerm(new Long(1));
+				acmInterfaceNumeroContrato.setTerm(Long.valueOf(1));
 				
 				entityManager.merge(acmInterfaceNumeroContrato);
 			}
@@ -259,7 +236,7 @@ public class ACMInterfaceNumeroContratoBean implements IACMInterfaceNumeroContra
 					} else if (campo.getJavaType().equals(Long.class)) {
 						query.setParameter(
 							"p" + i,
-							new Long(valor)
+							Long.parseLong(valor)
 						);
 					} else if (campo.getJavaType().equals(String.class)) {
 						query.setParameter(
@@ -269,7 +246,7 @@ public class ACMInterfaceNumeroContratoBean implements IACMInterfaceNumeroContra
 					} else if (campo.getJavaType().equals(Double.class)) {
 						query.setParameter(
 							"p" + i,
-							new Double(valor)
+							Double.parseDouble(valor)
 						);
 					}
 				} catch (Exception e) {
@@ -285,69 +262,5 @@ public class ACMInterfaceNumeroContratoBean implements IACMInterfaceNumeroContra
 		}
 		
 		return query;
-	}
-
-	private void setQueryParameters(CriteriaQuery<?> criteriaQuery, TypedQuery<?> query, MetadataConsulta metadataConsulta) {
-		Root<?> root = criteriaQuery.getRoots().iterator().next();
-		
-		SimpleDateFormat format = new SimpleDateFormat("dd/MM/yyyy HH:mm");
-		
-		// Setear los par�metros seg�n las condiciones del filtro
-		int i = 0;
-		for (MetadataCondicion metadataCondicion : metadataConsulta.getMetadataCondiciones()) {
-			if (!metadataCondicion.getOperador().equals(Constants.__METADATA_CONDICION_OPERADOR_INCLUIDO)) {
-				for (String valor : metadataCondicion.getValores()) {
-					String[] campos = metadataCondicion.getCampo().split("\\.");
-					
-					Path<?> field = root;
-					Join<?, ?> join = null;
-					for (int j=0; j<campos.length - 1; j++) {
-						if (join != null) {
-							join = join.join(campos[j], JoinType.LEFT);
-						} else {
-							join = root.join(campos[j], JoinType.LEFT);
-						}
-					}
-					
-					if (join != null) {
-						field = join.get(campos[campos.length - 1]);
-					} else {
-						field = root.get(campos[campos.length - 1]);
-					}
-					
-					try {
-						if (field.getJavaType().equals(Date.class)) {
-							query.setParameter(
-								"p" + i,
-								format.parse(valor)
-							);
-						} else if (field.getJavaType().equals(Long.class)) {
-							query.setParameter(
-								"p" + i,
-								new Long(valor)
-							);
-						} else if (field.getJavaType().equals(String.class)) {
-							query.setParameter(
-								"p" + i,
-								valor
-							);
-						} else if (field.getJavaType().equals(Double.class)) {
-							query.setParameter(
-								"p" + i,
-								new Double(valor)
-							);
-						}
-					} catch (Exception e) {
-						e.printStackTrace();
-					}
-					
-					i++;
-				}
-				
-				if (metadataCondicion.getValores().size() == 0) {
-					i++;
-				}
-			}
-		}
 	}
 }
